--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL = "mongodb+srv://aniket:aniket@endsem.jpetree.mongodb.net/?retryWrites=true&w=majority"
 PORT = 3001
+JWT_SECRET = 'somesuperstrongtoken'
